[workspace]
resolver = "2"
members = [
    "crates/zelto-ir",
    "crates/zelto-win32",
    "crates/zelto-runtime",
    "crates/zelto-d2d",
    "crates/zelto-compiler",
    "packages/zelto-std",
    "packages/zelto-cli",
    "examples/counter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zelto Contributors"]
license = "MIT"
repository = "https://github.com/zelto-framework/zelto"

[workspace.dependencies]
zelto-ir = { path = "crates/zelto-ir" }
zelto-win32 = { path = "crates/zelto-win32" }
zelto-runtime = { path = "crates/zelto-runtime" }
zelto-d2d = { path = "crates/zelto-d2d" }
zelto-std = { path = "packages/zelto-std" }
taffy = "0.5"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
