[package]
name = "zelto-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
zelto-ir = { workspace = true }
zelto-win32 = { workspace = true }
taffy = { workspace = true }
windows = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
